--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,2 @@
-/bin/AudioData.class
-/bin/AudioServer.class
-/bin/UDPListener.class
-*.class
-/bin/RTSPResponder.class
-/bin/BonjourEmitter.class
-/bin/RTSPPacket.class
-/bin/Rplay.class
-/bin/UDPDelegate.class
-/bin/com/beatofthedrum/alacdecoder/License.txt
-/bin/License.txt
-/.classpath
-/bin/.DS_Store
-/libs/.DS_Store
-/src/.DS_Store
-/.DS_Store
+.DS_Store
+bin
